--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "gen": "graphql-codegen --config codegen.yml --watch"
+    "gen": "graphql-codegen --config codegen.yml --watch",
+    "test": "jest --watch --passWithNoTests",
+    "test:ci": "jest --ci --passWithNoTests"
   },
   "dependencies": {
     "@apollo/client": "^3.7.15",
@@ -17,6 +19,7 @@
     "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.44.2",
     "tailwindcss": "^3.3.2"
   },
@@ -26,10 +29,18 @@
     "@graphql-codegen/typescript": "4.0.0",
     "@graphql-codegen/typescript-operations": "4.0.0",
     "@graphql-codegen/typescript-react-apollo": "3.3.7",
+    "@testing-library/dom": "^9.3.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
+    "@types/react-helmet": "^6.1.6",
+    "babel-jest": "^29.5.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "mock-apollo-client": "^1.2.1",
     "typescript": "5.0.4"
   }
 }
